# Cubemars-Python-API

./: .gitignore  cli.py  example_multi_motor_control.py  example_simple_control.py  main.c  pyproject.toml  readme.md
cubemars/: __init__.py  api.py  core.py  protocol.py
